--- a/HISTORY
+++ b/HISTORY
@@ -20,3 +20,7 @@
   * Allow `mock.stub(:foo => 17)` syntax.
   * Don't count block params when determining max arity.
   * Restore original const value when a const is stubbed more than once.
+
+0.5.0 - 4 July 2012
+  * Performance improvements, overhead is now roughly 10% down from 100%
+  * Allow both instance and class doubles for unloaded classes.
