--- a/HISTORY
+++ b/HISTORY
@@ -46,3 +46,7 @@
   * Support `expect` syntax.
   * Better naming in the API: `instance_double` and `class_double`. Deprecate
     `fire_double` and `fire_class_double`.
+
+1.3.0 - 7 November 2013
+  * Support for RSpec 3. When it is loaded, this library is now a no-op since
+    all the functionality (and more!) was ported.
